098 ==> 435387 - Crashes after not able to connect to database.
099 ==> 417431 - No metadata are displayed from non supported Exiv2 file formats.
100 ==> 435453 - Documentation of digiKam not available.
101 ==> 137060 - Image and Photograph Properties Incomplete.
102 ==> 326409 - Some EXIF tags are not read.
103 ==> 146864 - Lesser XMP support in digiKam.
104 ==> 228021 - digiKam not writing metadata in XMP.
105 ==> 221460 - Xmp subject tags imported in wrong order.
106 ==> 204042 - Crash when importing XMP file.
107 ==> 264007 - XMP sidecar file does not distinguish between images of the same name but with different extension.
108 ==> 434445 - Inconsistent use of term "comment" rather than "caption".
109 ==> 435476 - Wrong term "Comments" in Edit Metadata dialog.
110 ==> 370443 - jp2 metadata: Unrecognized UUID EXIF box.
111 ==> 265726 - digiKam doesn't detect lens type.
112 ==> 301087 - Browsing through my pic collection shows dozends of wrongs orientated jpg's.
113 ==> 364880 - digiKam crashes when rotating a picture.
114 ==> 367913 - digiKam crash on rotate image (right or left) action.
115 ==> 134862 - Display altitude value as a decimal number (no fraction).
116 ==> 136674 - Manually enter GPS Data for Pictures/Tags.
117 ==> 157552 - Negative altitudes are not shown in metadata GPS sidebar.
118 ==> 167139 - Crash if Exif.GPSInfo.GPSAltitude is empty.
119 ==> 435505 - Albums and keywords are always sorted alphabetically in descending order.
120 ==> 435541 - Cannot delete "Current search" from 8 "Current Search" labels.
121 ==> 136260 - EXIF, IPTC, and XMP editor embedded to Captions/Tags sidebar.
122 ==> 202709 - Sharing images among computers and update of local databases.
123 ==> 435578 - Merge tags dialog missing "Merge all" option.
124 ==> 435317 - GPS image direction incorrectly formatted.
125 ==> 435527 - Lightroom Face tags don't display properly.
126 ==> 435455 - Migration cannot drop or create FaceMatrices table [patch].
127 ==> 